@@ -36,5 +36,7 @@
     <div id="control-panel-div"></div>
 
 </div>
+<!-- Overlay that prevents us from seeing images briefly. -->
+<div id="overlay" style="position: absolute; top:0; width: 100%;height: 100%; left:0; background-color: black"></div>
 </body>
 </html>
